--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,7 @@
     version="2.4">
 
     <display-name>Hello, World Application</display-name>
+    <absolute-ordering />
     <description>
   This is a simple web application with a source code organization
   based on the recommendations of the Application Developer's Guide.
