--- a/pom.xml
+++ b/pom.xml
@@ -3,24 +3,18 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>fr.gaellalire.vestige_app.mywar</groupId>
   <artifactId>mywar</artifactId>
-  <version>0.0.2</version>
+  <version>0.0.1</version>
   <packaging>war</packaging>
   <dependencies>
     <dependency>
-      <groupId>jakarta.servlet</groupId>
-      <artifactId>jakarta.servlet-api</artifactId>
-      <version>5.0.0</version>
-      <scope>provided</scope>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>3.1.0</version>
     </dependency>
     <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
       <version>2.0</version>
-    </dependency>
-    <dependency>
-      <groupId>com.logic.servlet</groupId>
-      <artifactId>servlet-fragment-framework</artifactId>
-      <version>1.0</version>
     </dependency>
   </dependencies>
   <build>
