--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
-      <version>2.0</version>
+      <version>2.11.0</version>
     </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
@@ -31,11 +31,16 @@
         <plugin>
           <groupId>fr.gaellalire.vestige</groupId>
           <artifactId>vestige.plugin.verify</artifactId>
-          <version>1.1.2</version>
+          <version>1.2.0</version>
+        </plugin>
+        <plugin>
+          <groupId>fr.gaellalire</groupId>
+          <artifactId>jar_exploder_plugin</artifactId>
+          <version>1.0.0</version>
         </plugin>
         <plugin>
           <artifactId>maven-war-plugin</artifactId>
-          <version>3.2.2</version>
+          <version>3.3.2</version>
         </plugin>
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
@@ -65,9 +70,17 @@
       </plugin>
       <plugin>
         <artifactId>maven-war-plugin</artifactId>
-        <configuration>
-          <packagingExcludes>WEB-INF/lib/*.jar</packagingExcludes>
-        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>fr.gaellalire</groupId>
+        <artifactId>jar_exploder_plugin</artifactId>
+        <executions>
+          <execution>
+            <goals>
+              <goal>explode-jar</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
