--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>fr.gaellalire.vestige_app.mywar</groupId>
   <artifactId>mywar</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <packaging>war</packaging>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -96,7 +96,7 @@
   <scm>
     <connection>scm:git:git@gaellalire.fr:vestige_app/mywar.git</connection>
     <developerConnection>scm:git:git@gaellalire.fr:vestige_app/mywar.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>mywar-1.0.0</tag>
   </scm>
   <profiles>
     <profile>
